Partial passwords changing password implementation

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -15,3 +15,11 @@ spring:
       platform: postgres
       mode: always
       separator: "^^^ END OF SCRIPT ^^^"
+
+logging:
+  level:
+    org:
+      springframework:
+        security: debug
+
+    web: debug
