Simple session based authentication implementation

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,10 +18,5 @@ spring:
 
 logging:
   level:
-    org:
-      springframework:
-        security: debug
-
-    web: debug
-
-    bankapp.backend: debug
+    web: trace
+    bankapp.backend: trace
